# gene-connector-cli

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
assets/: .~lock.score-computation.ods#  bipolaris-gophy.tsv  phaeosphaeriaceae.tsv  reference_data.json  score-computation.ods
docs/: 01_installation.md  02_usage.md  03_project_structure.md  04_data_modelling.md  README.md
docs/book/: 01_installation.md  02_usage.md  03_project_structure.md  04_data_modelling.md
docs/drawio/: connection-information-diagram-Cermangicola.drawio
docs/manuscript/: README.md
docs/manuscript/example-data/: bipolaris-gophy.tsv
docs/manuscript/intermediary-files/: reference_data.json
docs/manuscript/supplementary-material/: ceratosystis-mangicola-connection.ods  gcon-input-gophy.xlsx  gophy-2022-05-06.tsv  gophy-2023-05-06.xlsx
docs/manuscript/supplementary-material/gcon-output/: out.tsv
docs/manuscript/tables/: metadata-classifiers.ods  score-computation.ods
docs/preamble/: ACKNOWLEDGEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md
src/gc/: settings.py
src/gc/core/domain/utils/: either.py  entities.py  exceptions.py  validations.py
src/gc/core/use_cases/: __init__.py
src/gc/core/use_cases/load_and_sanitize_data/: load_and_validate_source_table.py
src/gcon/: settings.py
src/gcon/adapters/pickledb/repositories/: connector.py  node_fetching.py  node_registration.py
src/gcon/core/domain/dtos/: connection.py  metadata.py  node.py  reference_data.py  score.py
src/gcon/core/domain/dtos/reference_data/: __init__.py  schemas.py
src/gcon/core/domain/dtos/tests/: test_metadata.py  test_reference_data.py  test_schemas.py
src/gcon/core/domain/entities/: node_fetching.py  node_registration.py
src/gcon/core/domain/utils/: entities.py  exceptions.py  lock.py  slugify.py
src/gcon/core/use_cases/: README.md  __init__.py  build_metadata_match_scores.py  collect_metadata.py  load_and_validate_source_table.py  persist_metadata_on_gc_server.py  run_gcon_pipeline.py
src/gcon/core/use_cases/build_metadata_match_scores/: __init__.py  _calculate_connection_match_score.py  _calculate_connection_observed_score.py
src/gcon/core/use_cases/collect_metadata/: __init__.py  _chunks_accessions.py  _collect_single_gene_metadata.py  _collect_unique_identifiers.py  _place_qualifiers.py
src/gcon/core/use_cases/collect_metadata/tests/: test_collect_metadata.py
src/gcon/core/use_cases/load_and_sanitize_data/: load_and_validate_source_table.py
src/gcon/core/use_cases/load_and_sanitize_data/tests/: test_load_and_validate_source_table.py
src/gcon/core/use_cases/load_and_validate_source_table/: __init__.py  _dtos.py  _validate_genes_fields.py  _validate_optional_fields.py  _validate_required_fields.py
src/gcon/core/use_cases/tests/: test_build_metadata_match_scores.py  test_collect_metadata.py  test_load_and_validate_source_table.py
src/gcon/ports/cli/: main.py
src/tests/mock/: bipolaris-invalid.tsv  bipolaris-valid.tsv  bipolaris.tsv  ceratocystis-valid.tsv  connections.json  reference_data.json
