# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "gene-connector-cli"
version = "0.4.3"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
description = "The Gene-Connector command line interface"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["DNA", "Bioinformatics", "Phylogeny", "Genomics", "Genetics"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


# ? ----------------------------------------------------------------------------
# ? Entrypoints
# ? ----------------------------------------------------------------------------

[project.scripts]

gcon = "gcon.ports.cli.main:gcon_cmd"


# ? ----------------------------------------------------------------------------
# ? Assets
# ? ----------------------------------------------------------------------------

[tool.setuptools.package-data]

gcon = ["assets/*"]

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.commitizen]

name = "cz_conventional_commits"
tag_format = "v$version"
bump_message = "bump: $current_version → $new_version [skip-ci]"


[tool.mypy]

python_version = 3.11
exclude = ["build/"]
ignore_missing_imports = "True"
explicit_package_bases = "./src/"
follow_imports = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
namespace_packages = "False"
disallow_untyped_defs = "True"

[tool.attrs-mypy]

init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"


[tool.flake8]

ignore = "E722, W503, E501, E203"
