# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "gene-connector-cli"
version = "0.6.3"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
description = "The Gene-Connector command line interface"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["DNA", "Bioinformatics", "Phylogeny", "Genomics", "Genetics"]
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools.dynamic]

dependencies = { file = ["requirements.txt"] }

[project.urls]

Homepage = "https://github.com/sgelias/gene-connector-cli"


# ? ----------------------------------------------------------------------------
# ? Entrypoints
# ? ----------------------------------------------------------------------------

[project.scripts]

gcon = "gcon.ports.cli.main:gcon_cmd"


# ? ----------------------------------------------------------------------------
# ? Assets
# ? ----------------------------------------------------------------------------

[tool.setuptools.package-data]

gcon = ["assets/*"]

# ? ----------------------------------------------------------------------------
# ? Poetry
# ? ----------------------------------------------------------------------------

[tool.poetry]

name = "gene-connector-cli"
version = "0.6.3"
description = "The Gene-Connector command line interface"
readme = "README.md"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]

[tool.poetry.dependencies]

python = ">=3.11"
attrs = "23.1.0"
pandera = "^0.16.1"
pickleDB = "^0.9.2"
Unidecode = "^1.3.6"
clean-base = "^0.1.2"
bibtexparser = "1.4.0"
click = "^8.1.7"
biopython = "^1.81"

[tool.poetry.dev-dependencies]

mypy = "^1.5.1"
twine = "^4.0.2"
keyring = "^24.2.0"
artifacts-keyring = "^0.3.4"
black = "^23.9.0"

[tool.poetry.scripts]

test = """
env \
    VALID_REFERENCE_TABLE=src/tests/mock/bipolaris-valid.tsv \
    INVALID_REFERENCE_TABLE=src/tests/mock/bipolaris-invalid.tsv \
    PARSED_REFERENCE_DATA_JSON=src/tests/mock/reference_data.json \
    CURRENT_USER_EMAIL=elias.samuel.galvao@gmail.com \
    python -m unittest
"""

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]

python_version = 3.11
exclude = ["build/"]
ignore_missing_imports = "True"
explicit_package_bases = "./src/"
follow_imports = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
namespace_packages = "False"
disallow_untyped_defs = "True"

[tool.attrs-mypy]

init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"


[tool.flake8]

ignore = "E722, W503, E501, E203"
